# sutro

./: .gitignore  Makefile  README.md  demo.py  gepa_test.py  pyproject.toml  ruff.toml
.github/: monorepo-ci.sh
materialized_intelligence/: __init__.py  cli.py  sdk.py
owner-concept-fit/: Balanced Corrected - balanced_sample.csv  candidates.json  validate.py
src/: cli.py  sdk.py
sutro/: __init__.py  cli.py  common.py  interfaces.py  observability.py  sdk.py  validation.py
sutro/internal/: common.py  embed.py
sutro/templates/: __init__.py  classification.py  embed.py  evals.py  structured_extraction.py
tests/: test_sdk.py
