[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.env]
requires = ["pip"]
type = "virtual"
installer = "uv"

[project]
name = "materialized-intelligence"
version = "0.1.7"
description = "Materialized Intelligence SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "numpy==2.1.1",
    "requests==2.32.3",
    "pandas==2.2.3",
    "polars==1.8.2",
    "click==8.1.7",
    "colorama==0.4.4",
    "yaspin==3.1.0",
    "tqdm==4.67.1"
]

[project.scripts]
mi = "materialized_intelligence.cli:cli"

[project.urls]
"Homepage" = "https://materialized.dev"
"Documentation" = "https://docs.materialized.dev"

[tool.hatch.build.targets.wheel]
packages = ["materialized_intelligence"]

[tool.hatch.build.targets.sdist]
include = [
    "materialized_intelligence",
    "README.md",
    "LICENSE",
]
exclude = [
    "demo_data",
    "demo.py",
    ".gitignore",
    ".DS_Store",
    "env",
]
