[build-system]
requires = ["uv_build>=0.7.19,<=0.9.2"]
build-backend = "uv_build"

[tool.hatch.env]
requires = ["pip"]
type = "virtual"
installer = "uv"

[project]
name = "sutro"
version = "0.1.39"
description = "Sutro Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "numpy>=2.1.1,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "polars>=1.33.0,<=1.34.0",
    "click>=8.1.7,<9.0.0",
    "colorama>=0.4.4,<1.0.0",
    "yaspin>=3.2.0,<4.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "pydantic>=2.11.4,<3.0.0",
    "pyarrow>=21.0.0,<22.0.0",
    "tabulate>=0.9.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.13.1"
]

[project.scripts]
sutro = "sutro.cli:cli"

[project.urls]
"Homepage" = "https://sutro.sh"
"Documentation" = "https://docs.sutro.sh"

[tool.uv.build-backend]
module-root = "."
source-include = [
    "sutro",
    "README.md",
    "LICENSE",
]
source-exclude = [
    "demo_data",
    "demo.py",
    ".gitignore",
    ".DS_Store",
    "env",
]
